# adaptable_synthdatagen_system

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  USAGE.md  pyproject.toml  test_adaptive_logic.py
config/: kb.yaml  routing.yaml  validators.yaml
config/recipes/: adaptive_demo_example.yaml  desert_plant_adaptability.yaml  freediving_gear_reviews.yaml  qa_pairs_example.yaml  task_rewrite_csv_batch.yaml  task_rewrite_example.yaml  task_rewrite_ml_augmentation.yaml
scripts/: build_kb.py  demo.py  generate.py  generate_adaptive.py  run_eval.py  update_bandit.py
src/core/: README.md  adaptive_pipeline.py  base_generator.py  base_validator.py  config_loader.py  feedback.py  generator_types.py  models.py  pipeline.py  plan.py  registry.py  router.py  spec.py  type_guards.py
src/evaluation/: metrics.py  task_harness.py  tinker_sentiment.py
src/generators/: closed_domain_generator.py  naive_generator.py  wizardlm_generator.py
src/quality/: __init__.py  base_filter.py  deduplication_validator.py  diversity.py  diversity_validator.py  entailment_validator.py  llm_judge_validator.py  model_filters.py  orchestrator.py  rule_filters.py  semantic_validator.py  similarity_validator.py
src/router/: __init__.py  adaptation_policy.py  adaptive_router.py  context_extractor.py  router.py  simple_router.py
src/storage/: packager.py
src/utils/: __init__.py  batch_processor.py  cohere_client.py  csv_augmenter.py  csv_batch_processor.py  deberta_client.py  embedding_client.py  llm_client.py  logger.py  retriever_index.py  storage.py  telemetry.py
(+10 files in other folders)
