[tool.poetry]
name = "synthetic-data-generator"
version = "0.1.0"
description = "Adaptable synthetic data generation system"
authors = ["María Benavente"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0.0"
cohere = "^4.0.0"
pyyaml = "^6.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
tiktoken = "^0.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
